# universal-agent-memory

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
agent-integrations/: README.md
docs/: AGENT_INTEGRATION.md  ARCHITECTURE.md  BENCHMARK_RESULTS_2026_07_09.md  CONTRACTS.md  DGX_SPARK_EMBEDDINGS.md  DGX_SPARK_MEMORY_LLM.md  ENTERPRISE_READINESS.md  ENTERPRISE_READINESS_REPORT_2026_07_09.md  ENTERPRISE_READINESS_REPORT_2026_07_10.md  FUNCTION_CATALOG.md  GITHUB_BRANCH_PROTECTION.md  HARDENING_AUDIT_2026_07_07.md  INDEX_FRESHNESS.md  LOCAL_AGENT_STRESS_VALIDATION_2026_07_13.md  LOCAL_MAC_OPERATIONS.md  OBSERVABILITY.md  OPERATIONS_RUNBOOK.md  PRODUCTION_GAP_AUDIT_2026_07_10.md  PRODUCTION_GAP_AUDIT_ADDENDUM_2026_07_13.md  PRODUCTION_READINESS_TESTING.md  RELEASE_CHECKLIST.md  RELEASE_EVIDENCE.md  ROADMAP_PHASE_2.md  ROADMAP_PHASE_3.md  ROADMAP_PHASE_4_ARCHIVAL_MEMORY.md  ROADMAP_PHASE_5_UNDERSTORY_INSIGHTS.md  ROADMAP_PHASE_6_RUNTIME_APPLIANCE.md  ROADMAP_PHASE_7_ADAPTIVE_RECALL.md  TARGET_ADAPTIVE_RECALL_VALIDATION_2026_07_14.md  TARGET_AGENT_REVALIDATION_2026_07_12.md  TARGET_AUDIT_INTEGRITY_VALIDATION_2026_07_14.md  TARGET_BACKUP_HISTORY_VALIDATION_2026_07_13.md  TARGET_DURABLE_AUTH_DENIAL_VALIDATION_2026_07_14.md  (+19 more)
scripts/: backup.py  (+53 more)
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_client.py
sdk/python/uam_client/: __init__.py  client.py  errors.py  models.py
(+196 files in other folders)
